Change ui navigation

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
   <!-- //Side Bar Script -->
   <script>
-    var toggle = true;
+    /* var toggle = true;
     $(".sidebar-icon").click(function () {
       if (toggle) {
         $(".page-container").addClass("sidebar-collapsed").removeClass("sidebar-collapsed-back");
@@ -42,7 +42,7 @@
       }
 
       toggle = !toggle;
-    });
+    }); */
   </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="./assets/js/vroom.js"></script>
