--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,19 @@
   <title>SchoolManagement</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-  <link href="./assets/css/atlas.css"  type="text/css"  rel="stylesheet">
-  <link href="./assets/css/bars.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/bootstrap-markdown.min.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/chocolat.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/clndr.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/fabochart.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/icon-font.min.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/jqvmap.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/popuo-box.css" type="text/css" rel="stylesheet">
-  <link href="./assets/css/vroom.css" type="text/css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="stylesheet" type="text/css"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+  <link href="./assets/css/atlas.css"  type="text/css"  rel="stylesheet"/>
+  <link href="./assets/css/bars.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/bootstrap-markdown.min.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/chocolat.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/clndr.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/fabochart.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/icon-font.min.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/jqvmap.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/popuo-box.css" type="text/css" rel="stylesheet"/>
+  <link href="./assets/css/vroom.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
