remove base tag

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-  <!-- <link rel="stylesheet" type="text/css"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/> -->
+  <link rel="stylesheet" type="text/css"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
   <link href="./assets/css/atlas.css"  type="text/css"  rel="stylesheet"/>
   <link href="./assets/css/bars.css" type="text/css" rel="stylesheet"/>
@@ -22,9 +22,8 @@
 </head>
 
 <body>
-  <!-- <app-root></app-root> -->
-  sdkhskjdkh
-  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script> -->
+  <app-root></app-root>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="./assets/js/vroom.js"></script>
   <script type="text/javascript" src="./assets/js/TweenLite.min.js"></script>
   <script type="text/javascript" src="./assets/js/CSSPlugin.min.js"></script>
